ndb - bug#55715 - don't crash on timeout in CS_PREPARE_TO_COMMIT, but simply log it once...